# mfit

./: .gitignore  README.md  pyproject.toml
mfit/: __init__.py  cf.py  fit.py  ibs.py  like_est.py
